# ts-nowcast-datasources

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
data/: future_features.txt  past_features.txt
gbtsnowcast/ml/models/: base.py  gradboost.py
gbtsnowcast/visualization/: plots.py
scripts/: data_inspection.ipynb  export-nc-to-csv.ipynb  gradboost_experiments.py  thuy-preview-dataset.ipynb
