[tool.poetry]
name = "gbtsnowcast"
version = "0.1.0"
description = "nowcast datasource"
authors = ["TuanKietTran <kyletran101.work@gmail.com>"]
license = "MeteoSwiss"
readme = "README.md"
packages = [{include = "gbtsnowcast"}]

[tool.poetry.dependencies]
python = "^3.10.0"
pandas = "^2.0.3"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
netcdf4 = "^1.6.4"
lightgbm = "^4.0.0"
dask = "^2023.8.0"
seaborn = "^0.12.2"
xarray = "^2023.8.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
